kubernetes/ingress/ingress-platform.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-platform
  namespace: platform
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 3001
      - path: /socket.io(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: socket-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
