kubernetes/ingress/ingress-socket.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socket-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/websocket-services: "socketserver"
spec:
  rules:
  - http:
      paths:
      - path: /socket.io
        pathType: Prefix
        backend:
          service:
            name: socketserver
            port:
              number: 80
